--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h3>BASAKSEHIR TEKNOLOJI TAKIMI</h3>
-        <a href="#" class="menu example5"><span></span></a>
+        <a href="#" class="menu hareket"><span></span></a>
     </header>
     <main>
         <section id="intro">
