--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h3>BASAKSEHIR TEKNOLOJI TAKIMI</h3>
-        <a href="#" class="menu hareket"><span></span></a>
+        <a href="#" class="menu hareket" id="menujs"><span></span></a>
     </header>
     <main>
         <section id="intro">
@@ -48,19 +48,16 @@
         <section id="musteriler" class="beyaz">
             <h1>BAŞAKŞEHİRLİ GÖRÜŞLERİ</h1>
             <div class="musteri">
-                <img src="images/image-emily.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi debitis labore odio numquam excepturi minima consequuntur aliquam nobis, at similique recusandae fugit tenetur reprehenderit eveniet sit harum itaque quia nostrum?</p>
                 <h5>Emine R.</h5>
                 <h6>Pazarlama Müdürü</h6>
             </div>
             <div class="musteri">
-                <img src="images/image-thomas.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi debitis labore odio numquam excepturi minima consequuntur aliquam nobis, at similique recusandae fugit tenetur reprehenderit eveniet sit harum itaque quia nostrum?</p>
                 <h5>Tolga S.</h5>
                 <h6>Operasyon Şefi</h6>
             </div>
             <div class="musteri">
-                <img src="images/image-jennie.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi debitis labore odio numquam excepturi minima consequuntur aliquam nobis, at similique recusandae fugit tenetur reprehenderit eveniet sit harum itaque quia nostrum?</p>
                 <h5>Cemre F.</h5>
                 <h6>İş İnsanı</h6>
@@ -75,20 +72,18 @@
     </main>
     <footer>
         <h3>
-            <img src="images/logo-footer.svg" alt="">
         </h3>
         <ul class="altMenu">
             <li><a href="#">Hakkımızda</a></li>
             <li><a href="#">Projeler</a></li>
         </ul>
         <ul class="sosyalMedya">
-            <li><a href="#"><img src="images/icon-instagram.svg" alt=""></a></li>
-            <li><a href="#"><img src="images/icon-pinterest.svg" alt=""></a></li>
-            <li><a href="#"><img src="images/icon-facebook.svg" alt=""></a></li>
-            <li><a href="#"><img src="images/icon-twitter.svg" alt=""></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
         </ul>
     </footer> 
     <script src="script.js"></script>
 </body>
 </html>
-
