--- a/hedeflerimiz.html
+++ b/hedeflerimiz.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/airstrike" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Hakkımızda</title>
-    <link rel="stylesheet" href="hakkimizda.css">
+    <link rel="stylesheet" href="hedeflerimiz.css">
+    <title>Hedeflerimiz</title>
 </head>
 <body>
     <header>
@@ -32,17 +32,17 @@
     <section>
         <div class="slider-container">
             <div class="slider">
-            <img src="imagesBTT3/220.jpg" alt="Resim 1">
-            <img src="imagesBTT3/186.JPG" alt="Resim 2">
-            <img src="imagesBTT3/224.jpg" alt="Resim 3">
+            <img src="imagesBTT3/221.jpg" alt="Resim 1">
+            <img src="imagesBTT3/225.JPG" alt="Resim 2">
+            <img src="imagesBTT3/169.jpg" alt="Resim 3">
             </div>
             <div class="slider-controls">
             <button class="prev-button"><i class="fas fa-chevron-left"></i></button>
             <button class="next-button"><i class="fas fa-chevron-right"></i></button>
             </div>
         </div>
-        <h4>Hakkımızda</h4>
-        <p>Başakşehir Teknoloji Takımı ilçemizin farklı okullarından seçilmiş öğrenciler tarafından oluşmaktadır. Mühendisliği, dostluğu, liderliği, takım çalışmasını aşılamak için çalışmaktadır. 2021 yılının ortalarında takımımızın temelleri atılıp 2022 yılının sonlarına doğru atölye çalışmaları yapmaya başladık. İlk yarışma tecrübemizi ise 2023 Bosphorus Regional'da yaşadık.</p>
+        <h4>Hedeflerimiz</h4>
+        <p>Takımımız FIRST Vakfı'nın her sene düzenlediği FRC yarışmalarına 2023 Bosphorus Regional ile giriş yapmış ve katıldığı ilk yarışmada FINALIST AWARD almaya layık görülmüştür. Elektronik, mekanik, yazılım, pr gibi alanlarda çalışan takım arkadaşlarımızla daha iyilerini başarmak için çalışmaktayız. Ayrıca 2023-2024 sezonundan itibaren Teknofest, VEX, FRC gibi alanlarda aktifliğimize devam etmeyi planlıyoruz.</p>
     </section>
 
 
@@ -58,8 +58,8 @@
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
         </ul>
-    </footer> 
-
-    <script src="hakkimizda.js"></script>
+    </footer>
+    
+    <script src="hedeflerimiz.js"></script>
 </body>
 </html>
