--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <ul id="menu">
                 <li><a href="hakkimizda.html">Hakkımızda</a></li>
-                <li><a href="#">Hedeflerimiz</a></li>
-                <li><a href="#">Projeler</a></li>
+                <li><a href="hedeflerimiz.html">Hedeflerimiz</a></li>
+                <li><a href="projeler.html">Projeler</a></li>
             </ul>
         </div>
     </header>
@@ -33,8 +33,8 @@
         <section id="yumurta">
             <div class="aciklama">
                 <h4>Hakkımızda</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam soluta ad maiores delectus minus, consectetur unde tempora eos id hic veritatis sint consequuntur. Nobis ipsa natus, tenetur sapiente vero minus!</p>
-                <a href="#">Detaylar</a>
+                <p>Başakşehir Teknoloji Takımı ilçemizin farklı okullarından seçilmiş öğrenciler tarafından oluşmaktadır.</p>
+                <a href="hakkimizda.html">Detaylar</a>
             </div>
             <div class="resim">
                 <img src="imagesBTT3/216.JPG">
@@ -46,8 +46,8 @@
             </div>
             <div class="aciklama">
                 <h4>Hedeflerimiz</h4>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam soluta ad maiores delectus minus, consectetur unde tempora eos id hic veritatis sint consequuntur. Nobis ipsa natus, tenetur sapiente vero minus!</p>
-                <a href="#">Detaylar</a>
+                <p>Takımımız FIRST Vakfı'nın her sene düzenlediği FRC yarışmalarına 2023 Bosphorus Regional ile giriş yapmış ve katıldığı ilk yarışmada FINALIST AWARD almaya layık görülmüştür.</p>
+                <a href="hedeflerimiz.html">Detaylar</a>
             </div>
             
         </section>
@@ -79,7 +79,8 @@
     <footer>
         <ul class="altMenu">
             <li><a href="hakkimizda.html">Hakkımızda</a></li>
-            <li><a href="#">Projeler</a></li>
+            <li><a href="projeler.html">Projeler</a></li>
+            <li><a href="hedeflerimiz.html">Hedeflerimiz</a></li>
         </ul>
         <ul class="sosyalMedya">
             <div class="instagram-icon"></div>
