--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="yumurta">
             <div class="aciklama">
                 <h4>Hakkımızda</h4>
-                <p>Başakşehir Teknoloji Takımı ilçemizin farklı okullarından seçilmiş öğrenciler tarafından oluşmaktadır.</p>
+                <p>Başakşehir Teknoloji Takımı ilçemizin farklı okullarından seçilmiş öğrenciler tarafından oluşmaktadır. Mühendisliği, dostluğu, liderliği, takım çalışmasını aşılamak için çalışmaktadır. 2021 yılının ortalarında takımımızın temelleri atılıp 2022 yılının sonlarına doğru atölye çalışmaları yapmaya başladık. İlk yarışma tecrübemizi ise 2023 Bosphorus Regional'da yaşadık.</p>
                 <a href="hakkimizda.html">Detaylar</a>
             </div>
             <div class="resim">
@@ -46,7 +46,7 @@
             </div>
             <div class="aciklama">
                 <h4>Hedeflerimiz</h4>
-                <p>Takımımız FIRST Vakfı'nın her sene düzenlediği FRC yarışmalarına 2023 Bosphorus Regional ile giriş yapmış ve katıldığı ilk yarışmada FINALIST AWARD almaya layık görülmüştür.</p>
+                <p>Takımımız FIRST Vakfı'nın her sene düzenlediği FRC yarışmalarına 2023 Bosphorus Regional ile giriş yapmış ve katıldığı ilk yarışmada FINALIST AWARD almaya layık görülmüştür. Elektronik, mekanik, yazılım, pr gibi alanlarda çalışan takım arkadaşlarımızla daha iyilerini başarmak için çalışmaktayız. Ayrıca 2023-2024 sezonundan itibaren Teknofest, VEX, FRC gibi alanlarda aktifliğimize devam etmeyi planlıyoruz.</p>
                 <a href="hedeflerimiz.html">Detaylar</a>
             </div>
             
