--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.cdnfonts.com/css/airstrike" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hakkımızda</title>
-    <link rel="stylesheet" href="hakkimizda.css">
+    <link rel="stylesheet" href="ortak.css">
 </head>
 <body>
     <header>
@@ -41,16 +41,26 @@
             <button class="next-button"><i class="fas fa-chevron-right"></i></button>
             </div>
         </div>
-        <h4>Hakkımızda</h4>
-        <p>Başakşehir Teknoloji Takımı ilçemizin farklı okullarından seçilmiş öğrenciler tarafından oluşmaktadır. Mühendisliği, dostluğu, liderliği, takım çalışmasını aşılamak için çalışmaktadır. 2021 yılının ortalarında takımımızın temelleri atılıp 2022 yılının sonlarına doğru atölye çalışmaları yapmaya başladık. İlk yarışma tecrübemizi ise 2023 Bosphorus Regional'da yaşadık.</p>
+        <h3>Hakkımızda</h3>
+        <p>Başakşehir Teknoloji Takımı, sunulan nitelikli teknoloji ve inovasyon eğitimlerinin sorumluluğunu alarak sürekli öğrenen ve kendisini geliştiren, sabırlı, disiplinli, özverili, takım çalışmasına yatkın öğrencilerden oluşan bir ekiptir.</p>
+        <p>Başakşehir Teknoloji Takımı ilçemizin farklı okullarından seçilmiş öğrenciler tarafından oluşmaktadır. Mühendisliği, dostluğu, liderliği, takım çalışmasını aşılamak için çalışmaktadır. Borsa İstanbul Başakşehir Mesleki ve Teknik Anadolu Lisesi Elektrik-Elektronik Teknolojisi öğretmenleri tarafından yapılacak atölye çalışmaları ile bahsi geçen alanlarda yarışmalara katılım sağlamak üzere yoğun bir proje geliştirme faaliyeti yapılacaktır. Bu kapsamda öğrencilerimiz aldıkları uygulamalı teknoloji eğitimi ile hem kendi gelişimlerini sağlayacak hem de katılım sağladıkları yarışmalar ile sosyal becerilerini ve özgüvenlerini arttırmış olacaklardır.</p>
+        <br>
+        <h3>Sadece Teknoloji Mi?</h3>
+        <p>BTT takım olarak sadece teknoloji konusunda değil çoçukların kişisel becerilerini duygularını ifade edebilme yeteneklerini ve düşüncelerini belirtebilme, bir takım ruhunu yaklaya bilme, topluma uyum sağlama,kişisel el becerileri, liderlik, yardım severlik vb. duygu ve düşünceleri aşılıyor ve değerli bireyleri topluma kazandırıyor.</p>
+        <br>
+        <h3>Neden FRC?</h3>
+        <p>Çünkü FRC yarışması hiçbir maddi kazancı olmamasına rağmen biz gençlere mühendislik sevdasını aşılamak ayrım yapmamak bir takım çalışması takımla bir bütün olmayı öğretmeye ve bunun gibi saygı duymayı rakiblerimizle yardımlaşmayı önemseyen herkesin birlik ve beraberlik içinde asıl amacı eğlenmek olan bir yarışmadır.</p>
+        <br>
+        <h3>Neden Biz?</h3>
+        <p>Biz BTT olarak çok zor aşamalardan geçtik bizi okullarımızdan seçerken olsun mülakatlarda olsun hepimiz özenle seçildi ayrım yapılmadan takıma yararı olucak başarısı olsun hayalleri olsun ufku geniş gençleri ve böyle alanlarda ilerlemek isteyen gençleri seçtiler. Biz ilk senemizde zorlu rakiplerimiz olduğu biz 1 tane vida ararken onların çeşitli motorlarla katıldığı yarışmada FİNALİST olduk ve bu çok büyük bir başarı bizim için. Biz böyle zorlu şartlarda FİNALİST oluyorsak sponsorluklar bulduğumuzda bizi desteklediğinizde çok daha iyi yerlere gelebileceğimizi düşünüyoruz.</p>
     </section>
 
 
     <footer>
         <ul class="altMenu">
             <li><a href="hakkimizda.html">Hakkımızda</a></li>
-            <li><a href="#">Projeler</a></li>
-            <li><a href="#">Hedeflerimiz</a></li>
+            <li><a href="projeler.html">Projeler</a></li>
+            <li><a href="hedeflerimiz.html">Hedeflerimiz</a></li>
         </ul>
         <ul class="sosyalMedya">
             <div class="instagram-icon"></div>
@@ -60,6 +70,6 @@
         </ul>
     </footer> 
 
-    <script src="hakkimizda.js"></script>
+    <script src="ortak.js"></script>
 </body>
 </html>
