--- a/hedeflerimiz.html
+++ b/hedeflerimiz.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/airstrike" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="hedeflerimiz.css">
+    <link rel="stylesheet" href="ortak.css">
     <title>Hedeflerimiz</title>
 </head>
 <body>
@@ -41,16 +41,18 @@
             <button class="next-button"><i class="fas fa-chevron-right"></i></button>
             </div>
         </div>
-        <h4>Hedeflerimiz</h4>
-        <p>Takımımız FIRST Vakfı'nın her sene düzenlediği FRC yarışmalarına 2023 Bosphorus Regional ile giriş yapmış ve katıldığı ilk yarışmada FINALIST AWARD almaya layık görülmüştür. Elektronik, mekanik, yazılım, pr gibi alanlarda çalışan takım arkadaşlarımızla daha iyilerini başarmak için çalışmaktayız. Ayrıca 2023-2024 sezonundan itibaren Teknofest, VEX, FRC gibi alanlarda aktifliğimize devam etmeyi planlıyoruz.</p>
+        <h3>Hedeflerimiz</h3>
+        <p>Takımımız First vakfının her sene düzenlediği FRC (FIRST ROBOTICS COMPETITION) yarışmalarına 2023 sezonunda giriş yapmış ve katıldığı ilk yarışmada CHARGED UP TEMASINDA FİNALİST OLMUŞTUR.</p>
+        <p>Elektronik, mekanik, yazılım, pr gibi alanlarda çalışan takım arkadaşlarımızla daha iyilerini başarmak için çalışmaktayız.</p>
+        <p>Ayrıca 2023-2024 sezonundan itibaren ulusal ve uluslararası düzeyde hâlihazırda yürütülen (Teknofest, FRC, FLL, MEB Robot, VEX, Pi Wars vb.) gibi alanlarda aktifliğimize devam etmeyi planlıyoruz. Bu yarışmaların en önemli kısmı ise ne kadar dünya çapında bir yarışma olursa olsun ücretli katılım sergileyebildiğimiz için öğrencilerinin tutunabildiği tek finans kaynağı sponsorlarımız.Önümüzdeki Sene Teknofest'e İHA kategorisinde katılım sergilemek istiyoruz Başakşehir'in semalarında uçan bir İHA yapmak istiyoruz. Dolayısıyla Bu sene gözlemlediğimiz ve büyük bir eksiğimiz olan sponsorluklar üzerinde çalışmaya başladık ve bir şans verirseniz sizlerle bir görüşme yapmayı istiyoruz isterseniz biz sizin ofisinize gelebiliriz isterseniz siz bizim atölyemize gelebilir hem imkân ve olanaklarımızı hem potansiyelimizi hem de çalışma alanımızı görmüş olursunuz bu şansı bize tanırsanız çok mutlu oluruz sevgilerle BTT.</p>
     </section>
 
 
     <footer>
         <ul class="altMenu">
             <li><a href="hakkimizda.html">Hakkımızda</a></li>
-            <li><a href="#">Projeler</a></li>
-            <li><a href="#">Hedeflerimiz</a></li>
+            <li><a href="projeler.html">Projeler</a></li>
+            <li><a href="hedeflerimiz.html">Hedeflerimiz</a></li>
         </ul>
         <ul class="sosyalMedya">
             <div class="instagram-icon"></div>
@@ -60,6 +62,6 @@
         </ul>
     </footer>
     
-    <script src="hedeflerimiz.js"></script>
+    <script src="ortak.js"></script>
 </body>
 </html>
