--- a/projeler.html
+++ b/projeler.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/airstrike" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="projeler.css">
+    <link rel="stylesheet" href="ortak.css">
     <title>Projeler</title>
 </head>
 <body>
@@ -32,9 +32,9 @@
     <section>
         <div class="slider-container">
             <div class="slider">
-            <img src="imagesBTT3/229.jpg" alt="Resim 1">
-            <img src="imagesBTT3/227.JPG" alt="Resim 2">
-            <img src="imagesBTT3/228.jpg" alt="Resim 3">
+            <img src="imagesBTT3/229.jpeg" alt="Resim 1">
+            <img src="imagesBTT3/227.jpeg" alt="Resim 2">
+            <img src="imagesBTT3/228.jpeg" alt="Resim 3">
             </div>
             <div class="slider-controls">
             <button class="prev-button"><i class="fas fa-chevron-left"></i></button>
@@ -60,6 +60,6 @@
         </ul>
     </footer>
 
-    <script src="projeler.js"></script>
+    <script src="ortak.js"></script>
 </body>
 </html>
