--- a/index.html
+++ b/index.html
@@ -52,21 +52,27 @@
             
         </section>
         <section id="musteriler" class="beyaz">
-            <h1>BAŞAKŞEHİRLİ GÖRÜŞLERİ</h1>
+            <h1>YARIŞMA VİDEOLARIMIZ</h1>
             <div class="musteri">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi debitis labore odio numquam excepturi minima consequuntur aliquam nobis, at similique recusandae fugit tenetur reprehenderit eveniet sit harum itaque quia nostrum?</p>
-                <h5>Emine R.</h5>
-                <h6>Pazarlama Müdürü</h6>
+                <video width="350" controls>
+                    <source src="yarismaVideolari/sıralama54.mp4" type="video/mp4">
+                </video>
+                <h5>Sıralama Maçı 54</h5>
+                <h6>2023 Bosphorus Regional</h6>
             </div>
             <div class="musteri">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi debitis labore odio numquam excepturi minima consequuntur aliquam nobis, at similique recusandae fugit tenetur reprehenderit eveniet sit harum itaque quia nostrum?</p>
-                <h5>Tolga S.</h5>
-                <h6>Operasyon Şefi</h6>
+                <video width="350" controls>
+                    <source src="yarismaVideolari/eleme8.mp4" type="video/mp4">
+                </video>
+                <h5>Eleme Maçı 8</h5>
+                <h6>2023 Bosphorus Regional</h6>
             </div>
             <div class="musteri">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi debitis labore odio numquam excepturi minima consequuntur aliquam nobis, at similique recusandae fugit tenetur reprehenderit eveniet sit harum itaque quia nostrum?</p>
-                <h5>Cemre F.</h5>
-                <h6>İş İnsanı</h6>
+                <video width="350" controls>
+                    <source src="yarismaVideolari/final1.mp4" type="video/mp4">
+                </video>
+                <h5>Final Maçı 1</h5>
+                <h6>2023 Bosphorus Regional</h6>
             </div>
         </section>
         <section id="galeri" class="beyaz">
